2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS

2001-07-18  Chema Celorio  <chema@celorio.com>

	* default-applications.desktop.in.in (Exec): use the right binary name

	* Makefile.am (INCLUDES): we are not using GNOMESYSCONFDIR. remove

2001-07-17  Chema Celorio  <chema@celorio.com>

	* Makefile.am (SUBDIRS): clean

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (default_application_properties_capplet_SOURCES):
	Added header files, including missing defaults.h
	(EXTRA_DIST): Removed header files

2001-07-16  Chema Celorio  <chema@celorio.com>

	* default-application-properties.c (possible_editors): is gedit not gEdit
	plues it is the default editor, not emacs ;-) (Yes, i MAY be a little biased
	here)

2001-07-16  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am: Fix typo in install-data-local.

2001-07-16  Richard Hestilow  <hestilow@ximian.com>

	* ChangeLog started.

	* default-application-properties.c (main): Pass correct name to
	capplet_widget_init, for .desktop file magic.