@@ -1,3 +1,14 @@
+2001-07-23  Richard Hestilow  <hestilow@ximian.com>
+
+	* callbacks.c (on_radiodefeditor_toggled): Only set_selected_editor
+	if the button is enabled.
+	(on_seldefbrowser_toggled): Ditto.
+	(on_seldefview_toggled): Ditto.
+	(on_seldefterm_toggled): Ditto.
+
+	* default-application-properties.c (fill_editor_data): Fix widget
+	name typo.
+
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
 	* RELEASE : 1.5.0
